# qpdf-gui

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
aur/: PKGBUILD  com.qpdf.gui.desktop
flatpak/: com.qpdf.gui.metainfo.xml  com.qpdf.gui.yml
snap/: snapcraft.yaml
snap/gui/: qpdf-gui.desktop
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: qpdf.rs
src-tauri/src/utils/: error.rs
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/components/shared/: DropZone.tsx  EmptyState.tsx  FileCard.tsx  OperationLogs.tsx  ProgressBar.tsx  ProgressOverlay.tsx  index.ts
src/features/batch/: BatchPage.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/decrypt/: DecryptPage.tsx
src/features/delete/: DeletePage.tsx
src/features/encrypt/: EncryptPage.tsx
src/features/extract/: ExtractPage.tsx
src/features/info/: InfoPage.tsx
src/features/linearize/: LinearizePage.tsx
src/features/merge/: MergePage.tsx
src/hooks/: index.ts  useFilePicker.ts  useFileSelection.ts  useQpdf.ts  useTheme.ts
src/i18n/: index.ts
src/stores/: appStore.ts  fileStore.ts  index.ts  loadingStore.ts  settingsStore.ts
src/types/: commands.ts  index.ts  pdf.ts  settings.ts
src/utils/: format.ts  validators.ts
(+9 files in other folders)
